# CSE-335

./: .gitignore
Project1/: CMakeLists.txt  GameApp.cpp  GameApp.h  main.cpp  pch.h
Project1/GameLib/: CMakeLists.txt  Clock.cpp  Clock.h  Door.cpp  Door.h  Food.cpp  Food.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Item.cpp  Item.h  ItemBackground.cpp  ItemBackground.h  ItemVisitor.cpp  ItemVisitor.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  Money.cpp  Money.h  Platform.cpp  Platform.h  Scoreboard.cpp  Scoreboard.h  SpartyGnome.cpp  SpartyGnome.h  Stanley.cpp  Stanley.h  Vector.cpp  Vector.h  Villain.cpp  Villain.h  Wall.cpp  Wall.h  ids.h  pch.h
Project1/Tests/: CMakeLists.txt  GameTest.cpp  ItemTest.cpp
Project1/levels/: level0.xml  level1.xml  level2.xml  level3.xml
Project2/LaboratoryLib/: ActualLaboratory.cpp  ActualLaboratory.h  CMakeLists.txt  Component.cpp  Component.h  EquipmentRack.cpp  EquipmentRack.h  FakeLaboratory.cpp  FakeLaboratory.h  LaboratoryFactoryOne.cpp  Shape.cpp  (+4 more)
Project2PostCheckpoint/: Final.anim
Project2PostCheckpoint/LaboratoryLib/: ActualLaboratory.cpp  ActualLaboratory.h  BezierEnd.cpp  BezierEnd.h  CMakeLists.txt  Cable.cpp  Cable.h  Clamp.cpp  Clamp.h  Component.cpp  Component.h  DistributionPanel.cpp  DistributionPanel.h  EquipmentRack.cpp  EquipmentRack.h  Event.cpp  Event.h  FakeLaboratory.cpp  FakeLaboratory.h  LaboratoryFactory.cpp  LaboratoryFactory.h  LaboratoryFactoryOne.cpp  LaboratoryFactoryTwo.cpp  LaboratoryFactoryTwo.h  Light.cpp  Light.h  LightningScreen.cpp  LightningScreen.h  Meter.cpp  Meter.h  MotionSink.cpp  MotionSink.h  MotionSource.cpp  MotionSource.h  Orbs.cpp  Orbs.h  PowerSink.cpp  PowerSink.h  PowerSource.cpp  PowerSource.h  (+14 more)
Project2PostCheckpoint/LaboratoryLib/resources/: LightningScreen.cpp  LightningScreen.h
Project2PostCheckpoint/LaboratoryLib/resources/scripts/: laboratory2.xml
step1/: Animal.cpp  Animal.h  Ant.cpp  Ant.h  CMakeLists.txt  Chicken.cpp  Chicken.h  Cow.cpp  Cow.h  Farm.cpp  Farm.h  doxygen_log.txt  main.cpp
step6/: CanadianExperienceApp.cpp
step7/: CanadianExperienceApp.cpp  pch.h
(+1355 files in other folders)
